    - Optimize and fix IL code after body alteration or code injection. You can
      control this behaviour from the settings window.
    - Extended verbatim string operand type in the constant & argument
      editor so that you can use special chars like \n, \t...
  
  upgrades:
    - Mono.Cecil update.

  bugfixes:
    - Fix ModuleAttributes value will never be saved in some case. (lonwern)

////////////////////////////////////////////////////////////////////////////////
// v1.8 - 14/07/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Added verbatim string operand type in the instruction
      editor so that you can use special chars like \n, \t...
  
  upgrades:
    - Support for Microsoft SDK v7.1A, v8.0A, v8.1A.

  bugfixes:
    - Fixed graphical issues with Windows 8.
    - PEVerify was not always targeting the proper assembly.
    - Strong name remover was not always targeting the proper assembly.
    - Fixed PE Header when removing strong name.
    - Fixed support for volatile and unsafe modifiers in "replace all with code"

////////////////////////////////////////////////////////////////////////////////
// v1.7 - 03/01/2014 ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - Module attributes support.
  
  upgrades:
    - Mono.Cecil update.
    - de4Dot 3.0.3 update.
	
  bugfixes:
    - Using "Replace All With Code" feature was unable to resolve the working
      assembly in some cases, preventing some advanced alterations to the 
      source code.
    - Fixed injection of nested types.
    - Properly handle module characteristics.
	  
////////////////////////////////////////////////////////////////////////////////
// v1.6 - 17/01/2013 ///////////////////////////////////////////////////////////