@@ -13,6 +13,7 @@
 
   bugfixes:
     - Fix ModuleAttributes value will never be saved in some case. (lonwern)
+	- Fix related property when deleting a getter or setter method
 
 ////////////////////////////////////////////////////////////////////////////////
 // v1.8 - 14/07/2014 ///////////////////////////////////////////////////////////
